--- a/.devcontainer/assets/css/style.css
+++ b/.devcontainer/assets/css/style.css
@@ -97,30 +97,38 @@ body{
     text-decoration: #900a0a;  
     padding: 4rem;
     background-color: rgba(243, 184, 142, 0.4);
-    border-radius: 80px;
+    border-radius: 60px;
     border: 2px solid #ea070b;
     position: absolute;
     margin-left: 5%;
     margin-top: 30px;
-    opacity: 0.5;   
+    opacity: 0.9;   
 
 }
 
-.Image1 {
-    background: url("../images/info-card1.jpg") no-repeat center center;
-}
+/* hover effect added with help of codepen.io */
 
-.Image2 :hover {
-    background: url("") no-repeat center center;
-    
-}
-
-.Image3{
-    background: url("") no-repeat center center;
-    
- 
-}
-
-.info-grid {
-    
-}
+.hidden-text:hover {
+    opacity: 1;
+    font-size: larger;
+    background-color: #b57324;
+    -webkit-transform: rotate(360deg) scale(1);
+    -moz-transform: rotate(360deg) scale(1);
+    -ms-transform: rotate(360deg) scale(1);
+    -o-transform: rotate(360deg) scale(1);
+    transform: rotate(360deg) scale(1);
+    -webkit-transition-delay: .3s;
+    -moz-transition-delay: .3s;
+    -o-transition-delay: .3s;
+    transition-delay: .3s;
+  }
+  
+  .hidden-text {
+    opacity: 0.5;
+    font-size: 20px;
+    -webkit-transition: .3s .5s;
+    -moz-transition: .3s .5s;
+    -o-transition: .3s .5s;
+    transition: .3s .5s;
+  }
+  
