--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,9 +211,9 @@ body{
 /* footer */
 footer {
 	background-image: url("../images/Hero-img3.jpg");
-	padding: 1em;
+    padding-bottom: 16px;	
 	text-align: right;
-	position: fixed;
+	/*position: fixed;*/
 	width: 100%;
     opacity: 0.8;
     height: fit-content;
