--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@
     border:0;
 }
 
+:root {
+    font-family: 'karma', 'playfair', sans-serif;       
+}
+
 /* Stylize Logo */
 #logo{
     font-family: 'Samarkan', sans-serif;
@@ -96,10 +100,6 @@ body{
     text-align: center;
  }
  
- .btn-style {
-    border: 2px solid #ea070b;    
- }
-
 /* 3 blank and info cards */
 
 .Image1, .Image2, .Image3 {
@@ -150,24 +150,23 @@ body{
 
  /* Contact Us page styling */
 
-
 #contact-page {
     height: 37.5rem;
     width: 100%;
-    overflow: hidden;
     position: relative;
-    
+    overflow: hidden;
 }
 
 #contact-image {
     height: 37.5rem;
     width: 100%;
     background-image: url("../images/Hero-img3.jpg");
+    overflow: hidden;
 }
 
 #contact-container {
     font-family: 'Karma', sans-serif;
-    padding: 4rem;
+    padding: 4rem;    
     background-color: rgba(243, 184, 142, 0.8);
     border-radius: 80px;
     border: 2px solid #ea070b;
@@ -190,12 +189,24 @@ body{
 }
 
 .input-box {
-    margin-top: 20px;
-    border: 2px solid #ea070b;
+    margin-top: 20px;    
     border-radius: 5px;
-    width: 200px;
+    width: 100%;
+    background-clip: padding-box;
     text-align: left;
 
+}
+
+.input-value {
+   background: rgb(250, 250, 250, 0.8);
+   font-family: Lato, sans-serif;
+   font-size: 100%;
+   font-weight: 600;
+   width: 100%;   
+   border: 2px solid #ea070b;
+   border-radius: 5px;
+   padding: 0.3125rem;
+   
 }
 
 .form .input-query {
@@ -205,6 +216,94 @@ body{
 .form .radio-message {
     margin-top: 30px;
 
+}
+
+#address-image {
+    height: 37.5rem;
+    width: 100%;
+    background-image: url("../images/Hero-img3.jpg");
+    overflow: hidden;
+    transform: rotate(180deg);
+}    
+
+/* For larger to medium screens size from 1300px wide and down */
+@media screen and (max-width: 1300px) {
+    #contact-page {
+        height: 37.5rem;
+        position: relative;
+        overflow: hidden;
+    }
+        
+    #contact-page, #contact-container {
+        width: 22.875rem;
+        height: fit-content;
+        
+    }
+
+
+
+    .input-value{
+        font-size: 119%;
+    }
+
+    .form .radio-message .label {
+        
+        font-size: 200%;
+    }
+
+
+
+
+
+ }
+ 
+ /* For small screen sizes from 750px wide and down */
+ @media screen and (max-width: 750px) {
+    #contact-page, #contact-container {
+        width: 22.875rem;
+        height: fit-content;
+    }
+
+    #contact-image {
+        background: none;
+    }
+
+    #contact-container h3 {
+        font-size: 3.75rem;
+        text-align: center;
+        margin-bottom: -3.75rem;
+
+    }
+    
+ }
+ 
+ /* For very small screen sizes from 450px wide and down */
+ @media screen and (max-width: 450px) {
+    #contact-panel-left,
+    #contact-panel-right {
+       width: 15.75rem;
+       height: 41.25rem;
+       padding: 2rem 1.5rem;
+    }
+ 
+    #welcome-text {
+       padding: 2rem 0.625rem;
+    }
+ 
+    #welcome-text h3 {
+       font-size: 400%
+    }
+ }
+ 
+ /* For very small screen sizes re-size the flip-cards */
+ @media screen and (max-width: 320px) {
+    .flip-card,
+    .flip-card-front img {
+       width: 18.75rem;
+       height: 18.75rem;
+    }
+ }
+    
 }
 
 /* footer */
@@ -232,6 +331,7 @@ footer > a {
 	padding: 0 5px;
 	font-size: 20px;
     text-align: right;
+    margin-right: 5px;
 }
 
 
