feat: added content to landing page and altered font-size on events.html page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,6 +346,12 @@ footer > a {
     overflow: hidden;
 }
 
+.e-details p {
+    font-size: larger;
+    
+    
+}
+
 /* Styling for responsive UX */
 
 /* For larger to medium screens size from 1300px wide and down */
