--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,8 @@
 /* Stylize Logo */
 .logo{
     font-family: 'Samarkan', sans-serif;    
-    text-emphasis-color: #900a0a;
+    -webkit-text-emphasis-color: #900a0a;    
+            text-emphasis-color: #900a0a;
     float: left;
     font-weight: 700;
     font-size: 300%;
@@ -66,7 +67,8 @@ body{
     color: #000000;
     text-align: center;
     text-shadow: 1px 1px #ffffff;
-    text-decoration: #900a0a;  
+    -webkit-text-decoration: #900a0a;
+            text-decoration: #900a0a;  
     padding: 4rem;
     background-color: rgba(243, 184, 142, 0.4);
     border-radius: 80px;
@@ -74,14 +76,17 @@ body{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
  }
  
  #text-in-hero p {
     color: #0b0b0b;
     text-align: center;
     text-shadow: 1px 1px #f20707;
-    text-decoration: #900a0a;
+    -webkit-text-decoration: #900a0a;
+            text-decoration: #900a0a;
     font-size: 150%;
  }
 
@@ -105,7 +110,8 @@ body{
     border-radius: 60px;
     border: 2px solid #ea070b;
     margin: 30px 10% 30px 5%;
-    animation: 3s; 
+    -webkit-animation: 3s;
+            animation: 3s; 
 
 }
 
@@ -123,9 +129,10 @@ body{
     background-color: rgba(245, 118, 0);    
     opacity: 0.9;
    
-    box-shadow: 5px 10px #f5fe06;
+    -webkit-box-shadow: 5px 10px #f5fe06;
+   
+            box-shadow: 5px 10px #f5fe06;
     -webkit-transition-delay: .3s;
-    -moz-transition-delay: .3s;
     -o-transition-delay: .3s;
     transition-delay: .3s;
   } 
@@ -137,7 +144,6 @@ body{
     background-color: rgba(245, 118, 0);    
     font-size: 0px;
     -webkit-transition: .3s .5s;
-    -moz-transition: .3s .5s;
     -o-transition: .3s .5s;
     transition: .3s .5s;
   } 
@@ -169,7 +175,9 @@ body{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
     width: 59%;
     height: 90%;
 }
@@ -239,10 +247,19 @@ body{
 }
 
 .g-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     text-align: center;
     margin: 20px 0 0 20px;
     width: auto;
@@ -270,19 +287,32 @@ body{
 }
 
 .g-container .g-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;        
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;        
 }
 
 .g-container .g-box .p-col-1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: 33%;      
 }
 
 .g-container .g-box .p-col-1 img {
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     width: 100%;
     height: 100%;
     border: #CCC;     
@@ -297,6 +327,8 @@ footer {
     padding-bottom: 16px;	
 	width: 100%;
     opacity: 0.8;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
     height: fit-content;
     position: relative;
     text-align: right;
@@ -363,6 +395,8 @@ footer > a {
         
     #contact-page, #contact-container {
         width: 22.875rem;
+        height: -webkit-fit-content;
+        height: -moz-fit-content;
         height: fit-content;
         
     }
@@ -390,6 +424,8 @@ footer > a {
     /* conatc.html page */    
         #contact-page, #contact-container {
             width: 22.875rem;
+            height: -webkit-fit-content;
+            height: -moz-fit-content;
             height: fit-content;
     }
 
@@ -407,9 +443,16 @@ footer > a {
 /* gallery.html page */
     
 .g-container .g-box {    
+    display: -webkit-box;    
+    display: -ms-flexbox;    
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;   
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;   
     margin-right: 5%; 
 }
 
@@ -493,9 +536,16 @@ footer > a {
     /* gallery.html page */
 
     .g-container .g-box {    
+        display: -webkit-box;    
+        display: -ms-flexbox;    
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;   
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;   
         margin-right: 5%; 
     }
     
